--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/aside.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <aside>
+        <img class="logo"src="./img/logo.png" alt="">
+        <nav></nav>
+    </aside>
+    <main>
+        MAIN
+    </main>
     
 </body>
 </html>
