--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         </nav>
     </aside>
     <main>
-        MAIN
+        <header class="main-header">
+            <h1 style="font-size: 50px;">Good Morning, Mallik! </h1>
+
+        </header>
     </main>
     
 </body>
