--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
     <main>
         <header class="main-header">
             <h1 style="font-size: 50px;">Good Morning, Mallik! </h1>
-
         </header>
+        <div class="container">
+            <div class="homeContainer">
+                <img src="#" alt="">
+                <p>Dashboard</p>
+                <p>See what's happening <br>at your company!</p>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
     </main>
     
 </body>
