--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </header>
         <div class="container">
             <div class="homeContainer">
-                <img src="#" alt="">
-                <p>Dashboard</p>
-                <p>See what's happening <br>at your company!</p>
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1 class="title">Dashboard</h1>
+                <p class="text">See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
                 </div>
             </div>
         </div>
