--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <aside>
         <img class="logo"src="./img/logo.png" alt="">
         <nav class="main-nav">
-            <img class="icon4" src="./img/icon4.webp" alt="">
-            <img class="icon" src="./img/icon.webp" alt="">
-            <img class="icon" src="./img/icon2.webp" alt="">
-            <img class="icon" src="./img/icon3.webp" alt="">
-            <img class="icon" src="./img/icon5.webp" alt="">
+            <a href="#"><img class="icon4" src="./img/icon4.webp" alt=""></a>
+            <a href="#"><img class="icon" src="./img/icon.webp" alt=""></a>
+            <a href="#"><img class="icon" src="./img/icon2.webp" alt=""></a>
+            <a href="#"><img class="icon" src="./img/icon3.webp" alt=""></a>
+            <a href="#"><img class="icon" src="./img/icon5.webp" alt=""></a>
         </nav>
     </aside>
     <main>
@@ -29,6 +29,51 @@
                 <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
                 <h1 class="title">Dashboard</h1>
                 <p class="text">See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                </div>
+            </div>
+            <div class="homeContainer">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1>Dashboard</h1>
+                <p>See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                </div>
+            </div>
+            <div class="homeContainer">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1>Dashboard</h1>
+                <p>See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                </div>
+            </div>
+            <div class="homeContainer">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1>Dashboard</h1>
+                <p>See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                </div>
+            </div>
+            <div class="homeContainer">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1>Dashboard</h1>
+                <p>See what's happening <br>at your company!</p>
+                <div class="bottom">
+                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                </div>
+            </div>
+            <div class="homeContainer">
+                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+                <h1>Dashboard</h1>
+                <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     <img class="board-picture" src="./img/main-img/picture1.png" alt="">
