--- a/index.html
+++ b/index.html
@@ -25,58 +25,58 @@
             <h1 style="font-size: 50px;">Good Morning, Mallik! </h1>
         </header>
         <div class="container">
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="background-color: #2DA492; box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon1.png" alt="">
                 <h1 class="title">Dashboard</h1>
                 <p class="text">See what's happening <br>at your company!</p>
                 <div class="bottom">
-                    <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    <i class="fa fa-arrow-right" style="color: #fff;"></i>
                     <img class="board-picture" src="./img/main-img/picture1.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon2.png" alt="">
                 <h1>Dashboard</h1>
                 <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="board-picture" src="./img/main-img/pictur2.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon3.png" alt="">
                 <h1>Dashboard</h1>
                 <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="board-picture" src="./img/main-img/picture3.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon4.png" alt="">
                 <h1>Dashboard</h1>
                 <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="board-picture" src="./img/main-img/picture4.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon5.png" alt="">
                 <h1>Dashboard</h1>
                 <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="board-picture" src="./img/main-img/picture5.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer">
-                <img class="board-icon" src="./img/main-img/icon1.jpg" alt="">
+            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
+                <img class="board-icon" src="./img/main-img/icon6.png" alt="">
                 <h1>Dashboard</h1>
                 <p>See what's happening <br>at your company!</p>
                 <div class="bottom">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="board-picture" src="./img/main-img/picture6.png" alt="">
                 </div>
             </div>
         </div>
