--- a/index.html
+++ b/index.html
@@ -26,57 +26,57 @@
         </header>
         <div class="container">
             <div class="homeContainer" style="background-color: #2DA492; box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon1.png" alt="">
+                <img class="board-icon flexForIcon" src="./img/main-img/icon1.png" alt="">
                 <h1 class="title">Dashboard</h1>
                 <p class="text">See what's happening <br>at your company!</p>
-                <div class="bottom">
+                <div class="bottom flex">
                     <i class="fa fa-arrow-right" style="color: #fff;"></i>
-                    <img class="board-picture" src="./img/main-img/picture1.png" alt="">
+                    <img class="dashboard" src="./img/main-img/picture1.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon2.png" alt="">
-                <h1>Dashboard</h1>
-                <p>See what's happening <br>at your company!</p>
-                <div class="bottom">
+            <div class="homeContainer" style="box-shadow: #F2E5C3 0px 20px 25px -5px;">
+                <img class="board-icon2 flexForIcon" src="./img/main-img/icon2.png" alt="">
+                <h1>Datasets</h1>
+                <p>Manage dataset, view dataset <br>reports across workspaces.</p>
+                <div class="bottom2 flex">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/pictur2.png" alt="">
+                    <img class="data" src="./img/main-img/picture2.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon3.png" alt="">
-                <h1>Dashboard</h1>
-                <p>See what's happening <br>at your company!</p>
-                <div class="bottom">
+            <div class="homeContainer" style="box-shadow: #F2CBCB 0px 20px 25px -5px;">
+                <img class="board-icon3 flexForIcon" src="./img/main-img/icon3.png" alt="">
+                <h1>Users</h1>
+                <p>Manage users, view user reports <br>across workspaces.</p>
+                <div class="bottom2 flex">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture3.png" alt="">
+                    <img class="users" src="./img/main-img/picture3.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon4.png" alt="">
-                <h1>Dashboard</h1>
-                <p>See what's happening <br>at your company!</p>
-                <div class="bottom">
+            <div class="homeContainer" style="box-shadow: #E7D8F2 0px 20px 25px -5px;">
+                <img class="board-icon flexForIcon" src="./img/main-img/icon4.png" alt="">
+                <h1>Real-time</h1>
+                <p>See what your users are working <br>on now in the tool.</p>
+                <div class="bottom2 flex">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture4.png" alt="">
+                    <img class="real-time" src="./img/main-img/picture4.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon5.png" alt="">
-                <h1>Dashboard</h1>
-                <p>See what's happening <br>at your company!</p>
-                <div class="bottom">
+            <div class="homeContainer" style="box-shadow: #D3DFF0 0px 20px 25px -5px;">
+                <img class="board-icon5 flexForIcon" src="./img/main-img/icon5.png" alt="">
+                <h1>Billing</h1>
+                <p>Manage billing for your users across <br>workspaces.</p>
+                <div class="bottom2 flex">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture5.png" alt="">
+                    <img class="billing" src="./img/main-img/picture5.png" alt="">
                 </div>
             </div>
-            <div class="homeContainer" style="box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
-                <img class="board-icon" src="./img/main-img/icon6.png" alt="">
-                <h1>Dashboard</h1>
-                <p>See what's happening <br>at your company!</p>
-                <div class="bottom">
+            <div class="homeContainer" style="box-shadow: #F3E0C4 0px 20px 25px -5px;">
+                <img class="board-icon flexForIcon" src="./img/main-img/icon6.png" alt="">
+                <h1>Campaign</h1>
+                <p>Send email campaigns, product <br>notifications to your users.</p>
+                <div class="bottom2 flex">
                     <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                    <img class="board-picture" src="./img/main-img/picture6.png" alt="">
+                    <img class="campaigns" src="./img/main-img/picture6.png" alt="">
                 </div>
             </div>
         </div>
