some file change

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </aside>
     <main>
         <header class="main-header">
-            <h1 style="font-size: 50px;">Good Morning, Mallik! </h1>
+            <h1 class="headerText">Good Morning, Mallik! </h1>
         </header>
         <div class="container">
             <div class="homeContainer" style="background-color: #2DA492; box-shadow: rgba(174, 206, 201) 0px 20px 25px -5px;">
